--- a/purchase_update_proposal/views/purchase_line_proposal.xml
+++ b/purchase_update_proposal/views/purchase_line_proposal.xml
@@ -9,14 +9,16 @@
                 <field name="line_id_" string="ID"/>
                 <field name="supplier_ref" />
                 <field name="product_id" />
-                <field name="qty" />
+                <field name="qty" attrs="{'readonly': [('partially_received', '=', True)]}"/>
                 <field name="date" />
-                <field name="price_u"/>
+                <field name="price_u" attrs="{'readonly': [('check_price', '=', False)]}"/>
                 <field name="product_qty" />
                 <field name="date_planned" />
                 <field name="price_unit"/>
                 <field name="line_id" invisible="1"/>
                 <field name="order_id" invisible="1"/>
+                <field name="partially_received" invisible="1"/>
+                <field name="check_price" invisible="1"/>
             </tree>
         </field>
     </record>
