--- a/purchase_landed_cost/views/account_move_view.xml
+++ b/purchase_landed_cost/views/account_move_view.xml
@@ -3,6 +3,7 @@
     <record id="view_move_form" model="ir.ui.view">
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
+        <field name="groups_id" eval="[(4, ref('purchase.group_purchase_user'))]" />
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page
