--- a/purchase_manual_currency/views/purchase_views.xml
+++ b/purchase_manual_currency/views/purchase_views.xml
@@ -12,29 +12,47 @@
                     groups="base.group_multi_currency"
                     attrs="{'invisible': [('is_manual', '=', False)]}"
                 />
-                <div groups="base.group_multi_currency">
-                    <field
-                        name="manual_currency"
-                        attrs="{'invisible': [('is_manual', '=', False)], 'readonly': [('state', '!=', 'draft')]}"
-                    />
-                    <field
-                        name="custom_rate"
-                        attrs="{'invisible': [('manual_currency', '=', False)], 'readonly': [('state', '!=', 'draft')]}"
-                    />
-                    <button
-                        aria-label="Opened"
-                        type="object"
-                        name="action_refresh_currency"
-                        class="btn-link"
-                        states="draft"
+                <div
+                    groups="base.group_multi_currency"
+                    attrs="{'invisible': [('is_manual', '=', False)]}"
+                >
+                    <field name="manual_currency" />
+                    <label for="manual_currency_rate" invisible='1' />
+                    <div
+                        class="o_row"
+                        attrs="{'invisible': [('manual_currency', '=', False)]}"
                     >
-                        <i
-                            title="Update Currency"
-                            class="fa fa-fw fa-refresh"
-                            attrs="{'invisible': [('manual_currency', '=', False)]}"
+                        <field name="manual_currency_rate" />
+                        <field
+                            name="type_currency"
+                            attrs="{'required': [('manual_currency', '=', True)]}"
                         />
-                    </button>
+                        <button
+                            aria-label="Opened"
+                            type="object"
+                            name="action_refresh_currency"
+                            class="btn-link"
+                            states="draft"
+                        >
+                            <i title="Update Currency" class="fa fa-fw fa-refresh" />
+                        </button>
+                    </div>
                 </div>
+            </xpath>
+            <xpath
+                expr="//field[@name='order_line']//tree/field[@name='price_subtotal']"
+                position="after"
+            >
+                <field name="subtotal_company_currency" />
+                <field name="company_currency_id" invisible="1" />
+            </xpath>
+            <xpath expr="//field[@name='tax_totals_json']" position="before">
+                <field
+                    name="total_company_currency"
+                    attrs="{'invisible': [('currency_diff', '=', False)]}"
+                />
+                <field name="company_currency_id" invisible="1" />
+                <field name="currency_diff" invisible="1" />
             </xpath>
         </field>
     </record>
