--- a/purchase_update_proposal/views/partner.xml
+++ b/purchase_update_proposal/views/partner.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<openerp>
-<data>
+<odoo>
 
-    <record id="view_partner_form" model="ir.ui.view">
+    <record id="view_partner_property_form" model="ir.ui.view">
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form" />
+        <field name="inherit_id" ref="purchase.view_partner_property_form" />
         <field name="arch" type="xml">
-            <field name="active" position="before">
+            <field name="property_supplier_payment_term_id" position="after">
                 <field
-                        name="check_price_on_proposal"
-                        groups="purchase.group_purchase_user"
-                    />
+                    name="check_price_on_proposal"
+                    groups="purchase.group_purchase_user"
+                />
             </field>
         </field>
     </record>
 
-</data>
-</openerp>
+</odoo>
