--- a/purchase_update_proposal/views/purchase_line_proposal.xml
+++ b/purchase_update_proposal/views/purchase_line_proposal.xml
@@ -4,7 +4,9 @@
     <record id="purchase_line_proposal_tree" model="ir.ui.view">
         <field name="model">purchase.line.proposal</field>
         <field name="arch" type="xml">
-            <tree editable="bottom" fonts="bold:qty!=product_qty">
+            <tree editable="bottom">
+            <!-- TODO Define a class instead of fonts-->
+            <!-- <tree editable="bottom" fonts="bold:qty!=product_qty"> -->
                 <field name="line_id_" string="ID" />
                 <field name="supplier_ref" />
                 <field name="product_id" />
